# respeaker_ros

./: .travis.yml  CMakeLists.txt  package.xml
scripts/: respeaker_gencfg.py  respeaker_node.py  speech_to_text.py
